test_regress/t/t_package_identifier_bad.out
%Error-PKGNODECL: t/t_package_identifier_bad.v:15:20: Package/class 'Bar' not found, and needs to be predeclared (IEEE 1800-2023 26.3)
   15 |     int baz = Foo::Bar::baz;
      |                    ^~~
                  ... For error description see https://verilator.org/warn/PKGNODECL?v=latest
%Error: Exiting due to
